# MyMillionsEOS

./: .gitignore  README.md
scripts/: build.sh  prepare_local_network.sh
scripts/jungle20/: cleos.sh  run-keosd.sh
scripts/jungle20/config/: config.ini
scripts/jungle20/wallet/: jungle.wallet
sources/: CMakeLists.txt  UnitTestsExternalProject.cmake  eosio.cdt.cmake
sources/mymillions/: CMakeLists.txt  common.hpp  config.hpp  logger.hpp  mymillions.cpp  mymillions.hpp  tables.hpp
sources/mymillions/resources/: mymillions.clauses.md  mymillions.contracts.md
sources/tests/eos/: CMakeLists.txt  common.hpp  eosio.cmake  main.cpp  mymillions_tests.cpp
sources/tests/eosfactory/: CMakeLists.txt  mymillions.py
